--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.2",
+    "date-fns": "^3.6.0",
+    "date-fns-tz": "^3.1.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
+    "tripkit-react": "^1.0.0-rc.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -36,5 +39,13 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "exports": {
+    "date-fns": "./node_modules/date-fns",
+    "date-fns-tz/format": "./node_modules/date-fns-tz/format/index.js",
+    "date-fns-tz/formatInTimeZone": "./node_modules/date-fns-tz/formatInTimeZone/index.js",
+    "date-fns-tz/toDate": "./node_modules/date-fns-tz/toDate/index.js",
+    "date-fns-tz/zonedTimeToUtc": "./node_modules/date-fns-tz/zonedTimeToUtc/index.js"
   }
 }
+
